Back to ex01, minor name changes

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -102,7 +102,7 @@ Our simulated world will consist of an aircraft, an atmospheric model and a terr
 ```@example ex01
 aircraft = Cessna172Xv1()
 atmosphere = SimpleAtmosphere()
-terrain = HorizontalTerrain(altitude = h_LOWS15)
+terrain = HorizontalTerrain(h_LOWS15)
 world = SimpleWorld(aircraft, atmosphere, terrain)
 nothing # hide
 ```
@@ -116,9 +116,9 @@ control architectures.
 
 ```SimpleAtmosphere``` provides a basic,
 [ISA](https://en.wikipedia.org/wiki/International_Standard_Atmosphere)-based atmospheric model with
-customizable sea-level conditions and wind velocity. ```HorizontalTerrain``` is a terrain model with
-constant orthometric elevation, which we have set to our previous value for the beginning of runway
-15\.
+customizable sea-level conditions and wind velocity, and ```HorizontalTerrain``` is a terrain model
+with constant orthometric elevation, which we have set to our previous value for the beginning of
+runway 15\.
 
 Now we can create our simulation:
 ```@example ex01
@@ -177,7 +177,7 @@ init_gnd = KinInit(;
     q_nb = REuler(ψ_LOWS15, 0, 0), #attitude with respect to NED frame, as Euler angles
     ω_wb_b = zeros(3), #angular velocity with respect to local tangent frame, aircraft frame coordinates
     v_eb_n = zeros(3), #Earth-relative velocity, NED frame coordinates
-    )
+    ) |> C172.Init
 nothing # hide
 ```
 
@@ -233,19 +233,18 @@ simulation has taken control of the visuals.
 Now return to the GUI and navigate to *Aircraft > Avionics > Flight Control*. This panel contains
 all the flight control inputs and instrumentation for the ```Cessna172Xv1``` model.
 
-First, expand the *Engine* section. Set the *Mixture* slider to around 0.5. Then, press and hold the
-*Engine Start* button to start the engine.
+First, locate the *Engine Start* button under the *Engine* section. Press and hold it for a couple
+of seconds to start the engine.
 
-Next, expand the *Longitudinal Control* and *Lateral Control* sections. The longitudinal control
-channel computes throttle and elevator commands. The lateral control channel computes aileron and
-rudder commands. Both are initialized in *Direct* mode, wherein each actuator command is set
-directly to the sum of its corresponding *Axis* and *Offset* values. With *Direct* mode active on
-both channels, you are essentially flying the base Cessna 172S model, except for the additional
-actuator dynamics.
+Next, expand the *Longitudinal Control Channel* and *Lateral Control Channel* sections. The first
+one computes throttle and elevator commands. The second one computes aileron and rudder commands.
+Both are initialized in *Direct* mode, wherein each actuator command is set directly to the sum of
+its corresponding *Axis* and *Offset* values. With *Direct* mode active on both channels, you are
+essentially flying the base Cessna 172S model, except for the additional actuator dynamics.
 
 Try moving the control surfaces using the *Axis* and *Offset* inputs, and observe the result on the
-GUI's numerical displays or an external X-Plane camera. When you are done, remember to reset all
-values back to zero.
+GUI's numerical displays or an external X-Plane camera. When you are done, reset all values back to
+zero.
 
 !!! note "Joystick Override"
 
@@ -263,51 +262,76 @@ elevator actuator commands. The pitch compensator modifies the natural short-per
 modes, providing a smoother, more stable pitch response. When clicked, the button will turn amber,
 indicating the mode is now on standby; it will engage automatically upon lift off.
 
-Under *Lateral Control*, select the *Roll/Yaw SAS* mode, which will also be put on standby. In this
-mode, both aileron and rudder inputs are fed to a MIMO lateral compensator, which computes aileron
-and rudder actuator commands. This improves the aircraft's Dutch roll response and stabilizes its
-naturally unstable spiral mode.
+Under *Lateral Control*, select the *Roll/Yaw SAS* mode. In this mode, both aileron and rudder
+inputs are fed to a lateral compensator, which simultaneously computes aileron and rudder actuator
+commands. This improves the aircraft's Dutch roll response and stabilizes its naturally unstable
+spiral mode.
 
 Currently, the GUI does not have a graphical instrument panel. Instead, the *Flight Data* section
 provides readouts for all essential variables. This will be particularly useful if you're running
 the example without X-Plane.
 
-SHOW SCREENSHOT WITH FLIGHT DATA EXPANDED
-
 ![Take-Off GUI](gui_take_off.png)
+
+*UPDATE SCREENSHOT WITH FLIGHT DATA EXPANDED*
 
 That is all we really need to set up for take off. We won't bother with flap settings, rotation or
 even keeping the aircraft centered on the runway (which, as far as our simulation is concerned,
-doesn't actually exist!). When you're ready, just set the *Throttle Input* all the way to 1 and let
+doesn't really exist!). When you're ready, just set the *Throttle Axis* all the way to 1 and let
 the aircraft accelerate and lift off on its own.
 
-Once airborne, you will see the selected modes change from amber to green. Let the aircraft climb
-for a while to give yourself some ground clearance. Then, spend some time flying with the SAS modes
-enabled. When you feel comfortable with the controls, try switching back and forth between the
-*Direct* and *Pitch SAS* modes and compare the aircraft's response to elevator input. You can do the
-same with the *Direct* and *Roll/Yaw SAS* modes, but be careful with that unstable spiral mode! If
-you crash, just reset the simulation and have another go:
-```julia
-Sim.init!(sim, init_gnd)
-Sim.run_interactive!(sim)
-```
+Once airborne, you will see the previously selected SAS modes turn from amber to green. Let the
+aircraft climb for a while to give yourself some clearance. Then, spend some time flying with the
+SAS modes enabled. When you feel comfortable with the controls, try switching back and forth between
+the *Direct* and *Pitch SAS* modes, and compare the aircraft's response to elevator input. You can
+do the same with the *Direct* and *Roll/Yaw SAS* modes to compare aileron and rudder responses, but
+mind the spiral mode instability!
 
-Next, switch to *EAS + Pitch Angle* mode. This one combines an autothrottle loop that tracks
-equivalent airspeed with a pitch angle loop built around the pitch SAS. Activating this mode will
-disable all *Throttle* and *Elevator* inputs and enable the *Equivalent Airspeed* and *Pitch Angle*
-sliders. The numerical readout to the right of each slider shows the current value of its target
-variable. In most cases, when a new control mode is engaged, its target variables will be
-automatically set to their current values to ensure a smooth transition.
+!!! tip "Crash Recovery"
 
-When you are done experimenting, feel free to try the rest of the higher level longitudinal modes.
+    If a crash is detected, the landing gear model will throw an exception and the simulation will
+    abort. No problem, just reset it and have another go:
+    ```julia
+    Sim.init!(sim, init_gnd)
+    Sim.run_interactive!(sim)
+    ```
 
-You may have noticed that the *Roll/Yaw SAS* mode does not provide automatic turn compensation. For
-this, we need to enable one of the higher level lateral modes, all of which provide sideslip angle
-tracking. For example, let's try the *Bank Angle + AoS* mode.
+Next, try the *EAS + Pitch Rate* mode. This mode combines an autothrottle loop with a pitch rate
+loop built on top of the pitch SAS. Activating this mode will disable all *Throttle* and *Elevator*
+inputs and enable the *EAS* and *Pitch Rate* commands. The numerical readout to the right of each
+command slider shows the current value of its target variable. Try changing the *EAS* command and
+observe the response. Then, experiment with the *Pitch Rate* command. While doing so, keep in mind
+that an arbitrary pitch rate cannot be sustained indefinitely!
 
-For more information on ```Cessna172Xv1```'s flight control system, you can check out the source
-code and the notebooks in (internal LINKS, see Documenter.jl), which document the design process
-from scratch.
+!!! note "Mode Transitions"
+
+    When a new autopilot mode is engaged, its command variables are automatically set to their current
+    values to provide a smooth transition. The exception are *Pitch Rate* and *Roll Rate* commands,
+    which are always initialized to zero.
+
+When you are done, enable the *EAS + Climb Rate* mode and set the *Climb Rate* command to zero. This
+will hold your altitude throughout the next steps.
+
+If you have attempted any turns so far, you may have noticed that the *Roll/Yaw SAS* mode does not
+provide automatic turn compensation. For this, you can try one of the higher level lateral modes,
+all of which track sideslip angle commands. Go ahead and enable the *Bank Angle + Sideslip* mode.
+Set the *Sideslip Angle* command to zero. Then, initiate a turn with the *Bank Angle* command and
+observe how the sideslip angle is held close to zero during the maneuver.
+
+Finally, let's move on to the *Course Angle + Sideslip* mode. (TO DO)
+
+Go to wind and add some crosswind. Notice how heading changes, turns into the
+wind to maintain the commanded course
+
+Feel free to try the rest of the control modes and the altitude guidance function. For more
+information on ```Cessna172Xv1```'s flight control system, you can check out the source code as well
+as the design notebooks in (internal LINKS, see Documenter.jl).
+
+One last thing. If the whole start and take-off sequence starts getting tedious, you can speed it up
+by increasing the simulation pace. However, you can also skip it altogether by using the ```trim!```
+function to initialize the aircraft in flight. Here's how to do it:
+
+
 
 ---
 
