Cosmetic changes, more progress on ex01.md

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -116,9 +116,9 @@ control architectures.
 
 ```SimpleAtmosphere``` provides a basic,
 [ISA](https://en.wikipedia.org/wiki/International_Standard_Atmosphere)-based atmospheric model with
-customizable sea-level conditions and wind velocity, and ```HorizontalTerrain``` is a terrain model
-with constant orthometric elevation, which we have set to our previous value for the beginning of
-runway 15\.
+customizable sea-level conditions and wind velocity. ```HorizontalTerrain``` is a terrain model with
+constant orthometric elevation, which we have set to our previous value for the beginning of runway
+15\.
 
 Now we can create our simulation:
 ```@example ex01
@@ -164,8 +164,8 @@ for joystick in update_connected_joysticks()
 end
 ```
 
-Otherwise, don't worry; in this example, you can let the SAS and autopilot modes handle the flying
-for you, which makes it easy to control the aircraft through the GUI.
+Otherwise, don't worry; in this example, we will let the SAS and autopilot modes handle most of
+the flying for us. This will make it relatively easy to control the aircraft through the GUI.
 
 The last step is to define a suitable initial condition. For on-ground initialization, we can do
 that by specifying the aircraft's frame kinematic state:
@@ -181,7 +181,7 @@ init_gnd = KinInit(;
 nothing # hide
 ```
 
-And then we assign it as:
+Then, we assign it as:
 ```@example ex01
 Sim.init!(sim, init_gnd)
 ```
@@ -201,11 +201,11 @@ will open:
 The *Simulation Control* panel lets you pause or resume the simulation, and set its pace relative to
 wall clock time. To abort the simulation, simply close the GUI window.
 
-The other panel is specific to our simulated ```System```. A complex ```System``` like this one
+The other panel is specific to our simulated ```System```. A complex ```System``` like ours
 comprises a hierarchy of components. Each component is itself a ```System```, and it typically
-defines its own GUI panel, which can be accessed from that of its parent. You can explore the GUI to
-get a picture of the underlying component hierarchy and discover different ways of interacting with
-the simulation.
+defines its own GUI panel, which can be accessed from that of its parent. Feel free to explore the
+GUI to get a picture of the underlying component hierarchy and discover different ways of
+interacting with the simulation.
 
 !!! tip "GUI State"
 
@@ -269,11 +269,9 @@ spiral mode.
 
 Currently, the GUI does not have a graphical instrument panel. Instead, the *Flight Data* section
 provides readouts for all essential variables. This will be particularly useful if you're running
-the example without X-Plane.
+this example without X-Plane.
 
 ![Take-Off GUI](gui_take_off.png)
-
-*UPDATE SCREENSHOT WITH FLIGHT DATA EXPANDED*
 
 That is all we really need to set up for take off. We won't bother with flap settings, rotation or
 even keeping the aircraft centered on the runway (which, as far as our simulation is concerned,
@@ -309,32 +307,43 @@ that an arbitrary pitch rate cannot be sustained indefinitely!
     values to provide a smooth transition. The exception are *Pitch Rate* and *Roll Rate* commands,
     which are always initialized to zero.
 
-When you are done, enable the *EAS + Climb Rate* mode and set the *Climb Rate* command to zero. This
-will hold your altitude throughout the next steps.
+When you are done, enable the *EAS + Climb Rate* mode. Set the *EAS* command to 50 m/s and the
+*Climb Rate* command to zero. This will hold your altitude throughout the next steps.
 
 If you have attempted any turns so far, you may have noticed that the *Roll/Yaw SAS* mode does not
-provide automatic turn compensation. For this, you can try one of the higher level lateral modes,
+provide automatic turn compensation. For this, you can use one of the higher level lateral modes,
 all of which track sideslip angle commands. Go ahead and enable the *Bank Angle + Sideslip* mode.
-Set the *Sideslip Angle* command to zero. Then, initiate a turn with the *Bank Angle* command and
-observe how the sideslip angle is held close to zero during the maneuver.
+Set the *Sideslip Angle* command to zero. Then, initiate a turn with the *Bank Angle* command, and
+notice how the sideslip angle is indeed held during the turn.
 
-Finally, let's move on to the *Course Angle + Sideslip* mode. (TO DO)
+Finally, enable the *Course Angle + Sideslip* mode. Set the *Course Angle* to 0 and let the aircraft
+turn to intercept it. Then, open the *Atmosphere > Wind* panel. Use the *East* slider to add some
+crosswind. Notice how the aircraft turns into the wind, settling on the appropriate heading to
+maintain the commanded course angle, while also tracking the commanded sideslip angle.
 
-Go to wind and add some crosswind. Notice how heading changes, turns into the
-wind to maintain the commanded course
+![Course Tracking GUI](gui_course.png)
 
-Feel free to try the rest of the control modes and the altitude guidance function. For more
-information on ```Cessna172Xv1```'s flight control system, you can check out the source code as well
-as the design notebooks in (internal LINKS, see Documenter.jl).
+One final suggestion before wrapping up. If the whole take-off sequence starts getting tedious, you
+can skip it entirely by using the trim functionality to initialize the aircraft in flight. Here's
+how to do it:
+```@example ex01
+init_air = C172.TrimParameters(;
+    Ob = Geographic(loc_LOWS15, h_LOWS15 + 500), #500 m above runway 15
+    EAS = 50.0,
+    ψ_nb = ψ_LOWS15,
+    γ_wb_n = 0.0, #wind-relative flight path angle
+    ψ_wb_dot = 0.0, #turn rate
+    flaps = 0.0, #flap setting
+    fuel_load = 0.5, #available fuel fraction
+)
+Sim.init!(sim, init_air)
+```
 
-One last thing. If the whole start and take-off sequence starts getting tedious, you can speed it up
-by increasing the simulation pace. However, you can also skip it altogether by using the ```trim!```
-function to initialize the aircraft in flight. Here's how to do it:
-
-
-
----
-
-**TODO: Maybe add on-air initialization**
-
-**TODO: Installation notes on dedicated section. Mention Revise**
+Feel free to explore the remaining control modes and the altitude guidance function on your own. For
+more information on ```Cessna172Xv1```'s flight controller, check out the [source
+code](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/c172x_ctl.jl)
+and the design notebooks for the
+[longitudinal](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/design/c172x_lon.ipynb)
+and
+[lateral](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/design/c172x_lat.ipynb)
+control channels.
