--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -329,12 +329,12 @@ how to do it:
 ```@example ex01
 init_air = C172.TrimParameters(;
     Ob = Geographic(loc_LOWS15, h_LOWS15 + 500), #500 m above runway 15
-    EAS = 50.0,
-    ψ_nb = ψ_LOWS15,
-    γ_wb_n = 0.0, #wind-relative flight path angle
-    ψ_wb_dot = 0.0, #turn rate
-    flaps = 0.0, #flap setting
-    fuel_load = 0.5, #available fuel fraction
+    EAS = 50.0, #equivalent airspeed (m/s)
+    ψ_nb = ψ_LOWS15, #runway heading (rad)
+    γ_wb_n = 0.0, #wind-relative flight path angle (rad)
+    ψ_wb_dot = 0.0, #turn rate (rad/s)
+    flaps = 0.0, #flaps position (0 to 1)
+    fuel_load = 0.5, #normalized fuel load (0 to 1)
 )
 Sim.init!(sim, init_air)
 ```
