Renamed System to Model

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -127,7 +127,7 @@ nothing # hide
 ```
 
 Under the hood, this call uses our ```SimpleWorld``` instance as a blueprint to construct a
-```System```, which is what the ```Simulation``` will actually interact with. The ```System``` type
+```Model```, which is what the ```Simulation``` will actually interact with. The ```Model``` type
 is central to the ```Flight.jl``` framework, and we will look into it further in future examples.
 
 Next, we instantiate an X-Plane 12 control interface and attach it to the simulation. This will
@@ -201,8 +201,8 @@ will open:
 The *Simulation Control* panel lets you pause or resume the simulation, and set its pace relative to
 wall clock time. To abort the simulation, simply close the GUI window.
 
-The other panel is specific to our simulated ```System```. A complex ```System``` like ours
-comprises a hierarchy of components. Each component is itself a ```System```, and it typically
+The other panel is specific to our simulated ```Model```. A complex ```Model``` like ours
+comprises a hierarchy of components. Each component is itself a ```Model```, and it typically
 defines its own GUI panel, which can be accessed from that of its parent. Feel free to explore the
 GUI to get a picture of the underlying component hierarchy and discover different ways of
 interacting with the simulation.
