--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -323,9 +323,9 @@ maintain the commanded course angle, while also tracking the commanded sideslip 
 
 ![Course Tracking GUI](gui_course.png)
 
-One final suggestion before wrapping up. If the whole take-off sequence starts getting tedious, you
-can skip it entirely by using the trim functionality to initialize the aircraft in flight. Here's
-how to do it:
+One final hint before wrapping up. If the whole take-off sequence starts getting tedious, you can
+skip it entirely by using the trim functionality to initialize the aircraft in flight. Here's how to
+do it:
 ```@example ex01
 init_air = C172.TrimParameters(;
     Ob = Geographic(loc_LOWS15, h_LOWS15 + 500), #500 m above runway 15
