Refactored default ModelTrait constructors

--- a/docs/src/examples/ex01/ex01.md
+++ b/docs/src/examples/ex01/ex01.md
@@ -287,8 +287,8 @@ mind the spiral mode instability!
 
 !!! tip "Crash Recovery"
 
-    If a crash is detected, the landing gear model will throw an exception and the simulation will
-    abort. No problem, just reset it and have another go:
+    If the landing gear model detects a crash, it will throw an exception and the simulation will
+    abort. Don't worry, just reset it and have another go:
     ```julia
     Sim.init!(sim, init_gnd)
     Sim.run_interactive!(sim)
