Finished first README.md version

--- a/docs/src/showcase/ex01/ex01.md
+++ b/docs/src/showcase/ex01/ex01.md
@@ -285,7 +285,7 @@ the *Direct* and *Pitch SAS* modes, and compare the aircraft's response to eleva
 do the same with the *Direct* and *Roll/Yaw SAS* modes to compare aileron and rudder responses, but
 mind the spiral mode instability!
 
-!!! tip "Crash Recovery"
+!!! tip "If You Crash..."
 
     If the landing gear model detects a crash, it will throw an exception and the simulation will
     abort. Don't worry, just reset it and have another go:
