--- a/docs/src/showcase/ex01/ex01.md
+++ b/docs/src/showcase/ex01/ex01.md
@@ -20,12 +20,12 @@ external visualization tool, we only need to set up a few things; for further he
 From the main menu, click on *New Flight*. Select the Cessna Skyhawk as your aircraft and Salzburg
 (LOWS) as your initial location. Start the flight.
 
-![X-Plane 12 New Flight Screen](xp12_new_flight.png)
+![X-Plane 12 New Flight Screen](assets/xp12_new_flight.png)
 
 To switch to an external camera, press Shift+4. Right click and drag to rotate the view and
 use the mouse wheel to zoom in and out. To return to the cockpit camera, press Shift+0.
 
-![X-Plane 12 Settings Icon](xp12_settings_icon.png)
+![X-Plane 12 Settings Icon](assets/xp12_settings_icon.png)
 
 Move the mouse to the top of the screen to bring up the menu bar. Click on the *Settings* icon and
 go the *Network* tab. Make sure *Accept incoming connections* is enabled. Then, under the *UDP
@@ -33,48 +33,28 @@ Ports* section, check the *Port we receive on (legacy)* value. The default is 49
 a different one if you need to. Finally, if you are running X-Plane on a different machine than your
 Julia session, note its IP address.
 
-![X-Plane 12 Network Settings](xp12_network_settings.png)
+![X-Plane 12 Network Settings](assets/xp12_network_settings.png)
 
 Now go to the *Graphics* tab. Unless you have a multi-monitor setup, you will probably want to run
 X-Plane in windowed mode. This will allow you to keep it on screen along with the ```Flight.jl```
 built-in GUI. To enable windowed mode, select *Windowed Simulator* in the *Monitor usage* drop-down.
 
-![X-Plane 12 Graphics Settings](xp12_graphics_settings.png)
+![X-Plane 12 Graphics Settings](assets/xp12_graphics_settings.png)
 
 You might also want to experiment with the quality settings until you achieve a comfortable
 framerate. To display the framerate on screen, go to the *Data Output* tab, find the *Framerate*
 entry in the table and enable the *Show in cockpit* option.
 
-![X-Plane 12 Data Output](xp12_data_output.png)
+![X-Plane 12 Data Output](assets/xp12_data_output.png)
 
 This concludes our X-Plane setup, now let's move on to Julia.
 
 
 ### Setting Up the ```Flight.jl``` Simulation
 
-!!! warning "Configuring Julia for Multithreading"
+!!! warning "On Multithreading"
 
-    When running an interactive simulation, ```Flight.jl``` uses multithreading to concurrently handle
-    the simulation loop, the built-in GUI and any attached I/O devices. Therefore, to work through this
-    example you will need to start Julia with multiple threads enabled. You can find out how to do this in
-    the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). However, if you are using the
-    Julia extension for VS Code, the easiest way is to add the following entry to your
-    ```settings.json```:
-
-    ```json
-    "julia.additionalArgs": [
-        "--threads=auto",
-    ],
-    ```
-
-    This should work well for most modern CPUs. If you have issues running the
-    simulation, try setting the number of threads manually to 4 or higher:
-
-    ```json
-    "julia.additionalArgs": [
-        "--threads=4",
-    ],
-    ```
+    To work through this example, you will need to start Julia with [multiple threads enabled](@ref "Installation").
 
 Let's begin by initializing the package:
 ```@example ex01
@@ -196,7 +176,7 @@ Sim.run_interactive!(sim)
 After a few seconds, the simulation will launch, and a new OS window containing the built-in GUI
 will open:
 
-![Default GUI](gui_default.png)
+![Default GUI](assets/gui_default.png)
 
 The *Simulation Control* panel lets you pause or resume the simulation, and set its pace relative to
 wall clock time. To abort the simulation, simply close the GUI window.
@@ -217,7 +197,7 @@ Let's get back to X-Plane for a moment. You should now see the aircraft sitting 
 the engine stopped*. This indicates that the X-Plane interface was set up properly and our
 simulation has taken control of the visuals.
 
-![X-Plane 12 Simulation Started](xp12_sim_start.png)
+![X-Plane 12 Simulation Started](assets/xp12_sim_start.png)
 
 !!! note "X-Plane 12 Demo Time Limit"
 
@@ -271,7 +251,7 @@ Currently, the GUI does not have a graphical instrument panel. Instead, the *Fli
 provides readouts for all essential variables. This will be particularly useful if you're running
 this example without X-Plane.
 
-![Take-Off GUI](gui_take_off.png)
+![Take-Off GUI](assets/gui_take_off.png)
 
 That is all we really need to set up for take off. We won't bother with flap settings, rotation or
 even keeping the aircraft centered on the runway (which, as far as our simulation is concerned,
@@ -321,7 +301,7 @@ turn to intercept it. Then, open the *Atmosphere > Wind* panel. Use the *East* s
 crosswind. Notice how the aircraft turns into the wind, settling on the appropriate heading to
 maintain the commanded course angle, while also tracking the commanded sideslip angle.
 
-![Course Tracking GUI](gui_course.png)
+![Course Tracking GUI](assets/gui_course.png)
 
 One final hint before wrapping up. If the whole take-off sequence starts getting tedious, you can
 skip it entirely by using the trim functionality to initialize the aircraft in flight. Here's how to
