Retouched ex01.md

--- a/docs/src/showcase/ex01/ex01.md
+++ b/docs/src/showcase/ex01/ex01.md
@@ -321,9 +321,4 @@ Sim.init!(sim, init_air)
 
 Feel free to explore the remaining control modes and the altitude guidance function on your own. For
 more information on ```Cessna172Xv1```'s flight controller, check out the [source
-code](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/c172x_ctl.jl)
-and the design notebooks for the
-[longitudinal](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/design/c172x_lon.ipynb)
-and
-[lateral](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/design/c172x_lat.ipynb)
-control channels.
+code](https://github.com/e271828e/Flight.jl/blob/master/src/aircraft/c172/c172x/control/c172x_ctl.jl).
