Implement similarity transform for C172X linearized model, update control design files and controller implementation

--- a/docs/src/showcase/ex01/ex01.md
+++ b/docs/src/showcase/ex01/ex01.md
@@ -291,7 +291,7 @@ When you are done, enable the *EAS + Climb Rate* mode. Set the *EAS* command to 
 *Climb Rate* command to zero. This will hold your altitude throughout the next steps.
 
 If you have attempted any turns so far, you may have noticed that the *Roll/Yaw SAS* mode does not
-provide automatic turn compensation. For this, you can use one of the higher level lateral modes,
+provide automatic turn coordination. For this, you can use one of the higher level lateral modes,
 all of which track sideslip angle commands. Go ahead and enable the *Bank Angle + Sideslip* mode.
 Set the *Sideslip Angle* command to zero. Then, initiate a turn with the *Bank Angle* command, and
 notice how the sideslip angle is indeed held during the turn.
