Move Robot2D controller design function to main module

--- a/src/examples/robot2d/robot2d_design.ipynb
+++ b/src/examples/robot2d/robot2d_design.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "36f3b1da",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
     "                    v_sum, m_sum], connections;\n",
     "                    w1 = :v_ref, z1 = P.y, unique = false)\n",
     "\n",
-    "    params = LQRParams(;\n",
+    "    params = LQRDataPoint(;\n",
     "        K_fbk = Matrix(K_fbk), K_fwd = Matrix(K_fwd), K_int = Matrix(K_int),\n",
     "        x_trim = Vector(x_trim), u_trim = Vector(u_trim), z_trim = Vector(z_trim))\n",
     "\n",
